kubernetes/apps/system/kopiur/repository/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.bykaj.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kopia
spec:
  hostnames:
    - kopia.${DOMAIN_APP}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: nas-kopia-ui
          port: 51515
